# tic-tac-toe-ai

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: board.rs  main.rs  minimax.rs
